@@ -1,3 +1,7 @@
+_2009_02_20__16_17_31_ Chi-Hsiu Liang
+
+  * Accounts for QM rotors that are close to prolate/oblate symmetric or spherical.
+
 _2009_02_20__13_06_31_ Chi-Hsiu Liang
 
   * Intemediate version while building SS-RS-ME and QM rotors.
